# DiagnosticsApp

./: CMakeLists.txt  CMakeLists.txt.user.44effdb.4.8-pre1  CMakeLists.txt.user.5344a7d.22  README.txt  main.cpp
DataCollectorModule/: AbstractMachineDetails.cpp  AbstractMachineDetails.h  AbstractMachineDetailsFactory.cpp  AbstractMachineDetailsFactory.h  AbstractMemoryDetails.cpp  AbstractMemoryDetails.h  AbstractMemoryDetailsFactory.cpp  AbstractMemoryDetailsFactory.h  AbstractOsDetails.cpp  AbstractOsDetails.h  AbstractOsDetailsFactory.cpp  AbstractOsDetailsFactory.h  AbstractProcessesList.cpp  AbstractProcessesList.h  AbstractProcessesListFactory.cpp  AbstractProcessesListFactory.h  CMakeLists.txt  MachineDetailsFactory.cpp  MachineDetailsFactory.h  MemoryDetailsFactory.cpp  MemoryDetailsFactory.h  OsDetailsFactory.cpp  OsDetailsFactory.h  ProcessesListFactory.cpp  ProcessesListFactory.h
DataCollectorModule/Unix/: CMakeLists.txt  UnixMachineDetails.cpp  UnixMachineDetails.h  UnixMemoryDetails.cpp  UnixMemoryDetails.h  UnixOsDetails.cpp  UnixOsDetails.h  UnixProcessesList.cpp  UnixProcessesList.h
DataCollectorModule/UnixDataCollector/: CMakeLists.txt  UnixMachineDetails.cpp  UnixMachineDetails.h  UnixMemoryDetails.cpp  UnixMemoryDetails.h  UnixOsDetails.cpp  UnixOsDetails.h  UnixProcessesList.cpp  UnixProcessesList.h
DataCollectorModule/Windows/: CMakeLists.txt  WindowsMachineDetails.cpp  WindowsMachineDetails.h  WindowsMemoryDetails.cpp  WindowsMemoryDetails.h  WindowsOsDetails.h  WindowsProcessesList.h
DataCollectorModule/WindowsDataCollector/: CMakeLists.txt  WindowsMachineDetails.cpp  WindowsMachineDetails.h  WindowsMemoryDetails.cpp  WindowsMemoryDetails.h  WindowsOsDetails.cpp  WindowsOsDetails.h  WindowsProcessesList.cpp  WindowsProcessesList.h
DataVisualizationModule/: AbstractDataVisualizationController.cpp  AbstractDataVisualizationController.h  AbstractDataVisualizationControllerFactory.cpp  AbstractDataVisualizationControllerFactory.h  CMakeLists.txt  DataVisualizationController.cpp  DataVisualizationController.h  DataVisualizationControllerFactory.cpp  DataVisualizationControllerFactory.h
DataVisualizationModule/DataModelModule/: AbstractDataModel.cpp  AbstractDataModel.h  CMakeLists.txt  DataModel.cpp  DataModel.h
DataVisualizationModule/UnixDataVisualizationController/: CMakeLists.txt  UnixDataVisualizationController - Copy.cpp  UnixDataVisualizationController.cpp  UnixDataVisualizationController.h
DataVisualizationModule/WindowsDataVisualizationController/: CMakeLists.txt  WindowsDataVisualizationController.cpp  WindowsDataVisualizationController.h
init/: config.h
